--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>This works!</h1>
+    <h1 id="title">This works!</h1>
     <!-- Js Script 연결은 body의 제일 마지막에 적어여 함 -->
     <script src="index.js"></script>
   </body>
