--- a/Web Pratice/index.html
+++ b/Web Pratice/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Web-Pratice</title>
   </head>
   <body>
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
-    <script src="index.js"></script>
+    <form class="js-form form">
+      <input type="text" placeholder="What is your name?" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
+    <script src="greeting.js"></script>
     <script src="clock.js"></script>
   </body>
 </html>
