--- a/Web Pratice/index.html
+++ b/Web Pratice/index.html
@@ -14,7 +14,12 @@
       <input type="text" placeholder="What is your name?" />
     </form>
     <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+      <input type="text" placeholder="Write a to do" />
+    </form>
+    <ul class="js-toDoList"></ul>
     <script src="greeting.js"></script>
     <script src="clock.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
