--- a/Web Pratice/index.html
+++ b/Web Pratice/index.html
@@ -21,5 +21,6 @@
     <script src="greeting.js"></script>
     <script src="clock.js"></script>
     <script src="todo.js"></script>
+    <script src="bg.js"></script>
   </body>
 </html>
