--- a/Web Pratice/index.html
+++ b/Web Pratice/index.html
@@ -18,6 +18,7 @@
       <input type="text" placeholder="Write a to do" />
     </form>
     <ul class="js-toDoList"></ul>
+    <span class="js-weather"></span>
     <script src="greeting.js"></script>
     <script src="clock.js"></script>
     <script src="todo.js"></script>
